--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "thapa",
-  "version": "1.0.0",
-  "description": "Thapa Technical Tutorials",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Jaideep Sheoran",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.3.1",
-    "express": "^4.17.2",
-    "gridfs-stream": "^1.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.1",
-    "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^2.0.15"
-  }
+    "name": "thapa",
+    "version": "1.0.0",
+    "description": "Thapa Technical Tutorials",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js"
+    },
+    "author": "Jaideep Sheoran",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
+        "dotenv": "^16.3.1",
+        "express": "^4.17.2",
+        "gridfs-stream": "^1.1.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.2.1",
+        "multer": "^1.4.4",
+        "multer-gridfs-storage": "^5.0.2",
+        "nodemon": "^2.0.15"
+    }
 }
